# slopwise

./: .gitignore  README.md  config.example.yaml  config_gemini.yaml  mon_rapport_qwen.md  pyproject.toml  v1.c  v2.c
.github/workflows/: ci.yml
examples/: cjson_1.7.14_vs_1.7.15_report.md
ghidra_scripts/: decompile_all.java  decompile_all.py
src/slopwise/: cli.py  config.py  decompile.py  diff.py  json_repair.py  llm.py  report.py  unpack.py
src/slopwise/agents/: analyzer.py  clusterer.py  critic.py  schemas.py
tests/: test_decompile_cache.py  test_diff.py  test_json_repair.py  test_schemas.py
