[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopwise"
version = "0.0.1"
description = "Semantic firmware diff via multi-agent LLM analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "slopwise contributors"}]
dependencies = [
    "litellm>=1.50",
    "click>=8.1",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
slopwise = "slopwise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
